fix styling overlap

--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -338,7 +338,7 @@ h1 {
     color: #007FFF;
 }
 
-main {
+#flex-main {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
